feat: add branch api handlers
